solved missing player name on turn

--- a/style2.css
+++ b/style2.css
@@ -20,26 +20,19 @@ div.a {
 	border: 2px solid #E15E32;
   }
   
-  .submit-btn {
-	border: 2px solid #000;
-	padding: 8px 8px;
-	font-size: 18px;
-	width: 250px;
-	border-radius: 5px;
-	margin-top: 10px;
-	background-color: #fff;
-  }
-  
-  .submit-btn:active,
-  .submit-btn:focus {
-	outline: none;
-	border: 2px solid #E15E32;
-  }
-  
-  .submit-btn:hover {
-	background-color: #ece9e9;
-  }
-  
+
+	
+	 .button1{
+		background-color: #4CAF50; /* Green */
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		margin-top: 50px;
+	}
 
 td {
 	border:  2px solid #333;
