--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,5 @@
-	
 .button1{
-		background-color: #4CAF50; /* Green */
+		background-color: rgb(7, 154, 199); /* cyan */
 		border: none;
 		color: white;
 		padding: 15px 32px;
@@ -9,6 +8,24 @@
 		display: inline-block;
 		font-size: 16px;
 		margin-top: 50px;
+		position: fixed;
+		right: 10px;
+		top: 2px;
+	}
+
+.button2{
+		background-color: rgb(8, 141, 30); /* green */
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		margin-top: 50px;
+		position: fixed;
+		left: 10px;
+		top: 2px;
 	}
 
 td {
@@ -45,23 +62,3 @@ table tr td:first-child {
 table tr td:last-child {
 	border-right: 0;
 }
-
-.endgame {
-  display: none;
-  width: 200px;
-  top: 120px;
-  background-color: rgba(205,133,63, 0.8);
-  position: absolute;
-  left: 50%;
-  margin-left: -100px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-  border-radius: 5px;
-  color: white;
-  font-size: 2em;
-}
-
-
-
-
