added visual improvements

--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,10 @@
+div.a{
+	text-align: center;
+}
+
+div.b{
+	text-align:center;
+}
 .button1{
 		background-color: rgb(7, 154, 199); /* cyan */
 		border: none;
