--- a/style2.css
+++ b/style2.css
@@ -53,17 +53,20 @@ table {
 	margin-left: -155px;
 	top: 250px;
 }
-
-table tr:first-child td {
-	border-top: 0;
+table td{
+	border: 3px solid black;
 }
 
-table tr:last-child td {
-	border-bottom: 0;
+table tr:first-child td {
+	border-top: 0px;
 }
 
 table tr td:first-child {
 	border-left: 0;
+}
+
+table tr:last-child td {
+	border-bottom: 0;
 }
 
 table tr td:last-child {
